feat: add the ability to generate variants and themes

--- a/scss/themes/dark/_variables.scss
+++ b/scss/themes/dark/_variables.scss
@@ -26,6 +26,7 @@
 @import "variables/components/jumbotron";
 @import "variables/components/popovers";
 @import "variables/components/modals";
+@import "variables/components/navbar";
 @import "variables/components/progress-bars";
 @import "variables/components/list-group";
 @import "variables/components/breadcrumb";
