fix: add themes support to close

--- a/scss/themes/dark/_variables.scss
+++ b/scss/themes/dark/_variables.scss
@@ -30,6 +30,8 @@
 @import "variables/components/progress-bars";
 @import "variables/components/list-group";
 @import "variables/components/breadcrumb";
+@import "variables/components/toasts";
+@import "variables/components/close";
 
 // Apps
 @import "variables/apps/email";
