--- a/scss/themes/dark/_variables.scss
+++ b/scss/themes/dark/_variables.scss
@@ -16,6 +16,7 @@
 @import "variables/components/links";
 @import "variables/components/tables";
 @import "variables/components/buttons-forms";
+@import "variables/components/custom-forms";
 @import "variables/components/navs";
 @import "variables/components/header";
 @import "variables/components/sidebar";
