--- a/css/toasts.css
+++ b/css/toasts.css
@@ -25,13 +25,20 @@
   max-width: 350px;
   overflow: hidden;
   font-size: 0.875rem;
-  background-color: rgba(255, 255, 255, 0.85);
   background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 21, 0.1);
+  border: 1px solid;
   box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 21, 0.1);
   backdrop-filter: blur(10px);
   opacity: 0;
   border-radius: 0.25rem;
+  background-color: rgba(255, 255, 255, 0.85);
+  border-color: rgba(0, 0, 21, 0.1);
+}
+
+.c-dark-theme .toast {
+  color: #e1e1e1;
+  background-color: #37373d;
+  border-color: transparent;
 }
 
 .toast:not(:last-child) {
@@ -60,10 +67,17 @@
   display: flex;
   align-items: center;
   padding: 0.25rem 0.75rem;
+  background-clip: padding-box;
+  border-bottom: 1px solid;
   color: #8a93a2;
   background-color: rgba(255, 255, 255, 0.85);
-  background-clip: padding-box;
-  border-bottom: 1px solid rgba(0, 0, 21, 0.05);
+  border-color: rgba(0, 0, 21, 0.05);
+}
+
+.c-dark-theme .toast-header {
+  color: #e1e1e1;
+  background-color: #37373d;
+  border-color: rgba(0, 0, 21, 0.2);
 }
 
 .toast-body {
