--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -23,6 +23,7 @@
 @import "variables/components/links";
 @import "variables/components/tables";
 @import "variables/components/buttons-forms";
+@import "variables/components/custom-forms";
 @import "variables/components/navs";
 @import "variables/components/navbar";
 @import "variables/components/header";
