--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -9,6 +9,15 @@
   &[class*="bg-"] {
     border-color: rgba($black, .1);
   }
+
+  &.c-footer-fixed {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: $zindex-fixed;
+    @include elevation(2, "top");
+  }
 }
 
 @include themes($footer-theme-map, $parent: ".c-footer") {
