refactor: separate the `.c-subheader` from the `.c-header`

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -27,6 +27,7 @@
 @import "variables/components/navs";
 @import "variables/components/navbar";
 @import "variables/components/header";
+@import "variables/components/subheader";
 @import "variables/components/sidebar";
 @import "variables/components/footer";
 @import "variables/components/dropdowns";
