--- a/scss/coreui.scss
+++ b/scss/coreui.scss
@@ -51,6 +51,7 @@
 @import "progress-group";
 @import "sidebar";
 @import "spinners";
+@import "subheader";
 @import "switches";
 @import "tables";
 @import "toasts";
