--- a/scss/themes/dark/_variables.scss
+++ b/scss/themes/dark/_variables.scss
@@ -19,6 +19,7 @@
 @import "variables/components/custom-forms";
 @import "variables/components/navs";
 @import "variables/components/header";
+@import "variables/components/subheader";
 @import "variables/components/sidebar";
 @import "variables/components/footer";
 @import "variables/components/dropdowns";
