feat: add new option `.c-fixed-components` to the `.c-wrapper` component

--- a/scss/layouts/_default.scss
+++ b/scss/layouts/_default.scss
@@ -21,27 +21,18 @@
   flex-direction: column;
   min-height: 100vh;
 
-  .c-header-fixed{
-    margin: inherit;
-  }
-}
+  &.c-fixed-components {
+    height: 100vh;
 
-// if header on top
-.c-header {
-  ~ .c-sidebar {
-    margin-top: $header-height;
-  }
-
-  &.c-header-fixed ~ .c-wrapper {
-    margin-top: $header-height;
-  }
-
-  &.c-header-with-subheader {
-    ~ .c-sidebar {
-      margin-top: $header-height + $header-subheader-height;
+    .c-header-fixed,
+    .c-subheader-fixed,
+    .c-footer-fixed {
+      position: relative;
     }
-    &.c-header-fixed ~ .c-wrapper {
-      margin-top: $header-height + $header-subheader-height;
+
+    .c-body {
+      flex-direction: column;
+      overflow: scroll;
     }
   }
 }
@@ -65,12 +56,3 @@
   }
 }
 
-.c-header-fixed {
-  ~ .c-body {
-    padding-top: $header-height;
-  }
-
-  &.c-header-with-subheader ~ .c-body {
-    padding-top: $header-height + $header-subheader-height;
-  }
-}
