fix: reclaim old layout options

--- a/scss/layouts/_default.scss
+++ b/scss/layouts/_default.scss
@@ -21,8 +21,16 @@
   flex-direction: column;
   min-height: 100vh;
 
+  .c-header-fixed {
+    margin: inherit;
+  }
+
   &.c-fixed-components {
     height: 100vh;
+
+    .c-header-fixed {
+      margin: initial;
+    }
 
     .c-header-fixed,
     .c-subheader-fixed,
