fix: change `display: initial` to `display: block` because of ie11

--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -458,7 +458,7 @@
     }
 
     .c-sidebar-brand-minimized {
-      display: initial;
+      display: block;
     }
 
     .c-sidebar-nav {
@@ -618,7 +618,7 @@
     }
 
     .c-sidebar-brand-minimized {
-      display: initial;
+      display: block;
     }
 
     .c-sidebar-nav {
