--- a/scss/themes/dark/variables/components/_buttons-forms.scss
+++ b/scss/themes/dark/variables/components/_buttons-forms.scss
@@ -3,18 +3,18 @@
 // Shared variables that are reassigned to `$input-` and `$btn-` specific variables.
 
 // Dark theme
-$input-dark-theme-bg:                        $gray-dark-theme-400 !default;
-$input-dark-theme-disabled-bg:               rgba($white, .12) !default;
-$input-dark-theme-color:                     $gray-100 !default;
-$input-dark-theme-border-color:              $gray-dark-theme-400 !default;
-$input-dark-theme-focus-bg:                  lighten($gray-dark-theme-400, 12%) !default;
-$input-dark-theme-focus-border-color:        lighten($gray-dark-theme-400, 12%) !default;
-$input-dark-theme-focus-color:               $gray-100 !default;
-$input-placeholder-dark-theme-color:         $gray-500 !default;
+$input-dark-theme-bg:                        rgba($white, .10) !default;
+$input-dark-theme-disabled-bg:               rgba($white, .05) !default;
+$input-dark-theme-color:                     $body-dark-theme-color !default;
+$input-dark-theme-border-color:              rgba($white, .15) !default;
+$input-dark-theme-focus-bg:                  rgba($white, .15) !default;
+$input-dark-theme-focus-border-color:        rgba($white, .2) !default;
+$input-dark-theme-focus-color:               $body-dark-theme-color !default;
+$input-placeholder-dark-theme-color:         rgba($body-dark-theme-color, .25) !default;
 $input-plaintext-dark-theme-color:           $body-dark-theme-color !default;
-$input-group-addon-dark-theme-color:         $gray-100 !default;
-$input-group-addon-dark-theme-bg:            $gray-800 !default;
-$input-group-addon-dark-theme-border-color:  $gray-900 !default;
+$input-group-addon-dark-theme-color:         rgba($body-dark-theme-color, .5) !default;
+$input-group-addon-dark-theme-bg:            $gray-dark-theme-900 !default;
+$input-group-addon-dark-theme-border-color:  $gray-dark-theme-900 !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $form-theme-map: map-merge(
