--- a/scss/coreui.scss
+++ b/scss/coreui.scss
@@ -1,6 +1,6 @@
 /*!
- * CoreUI Pro UI Kit
- * @version v3.0.0-rc.5
+ * CoreUI PRO - HTML, CSS, and JavaScript UI Components Library
+ * @version v3.0.0
  * @link https://coreui.io/pro/
  * Copyright (c) 2020 creativeLabs Łukasz Holeczek
  * License (https://coreui.io/pro/license/)
