--- a/scss/_transitions.scss
+++ b/scss/_transitions.scss
@@ -39,12 +39,16 @@
 //
 
 .c-wrapper {
-  will-change: auto;
-  transition: transform $layout-transition-speed, margin-left $layout-transition-speed, margin-right $layout-transition-speed, width $layout-transition-speed, flex $layout-transition-speed;
+  transition: all $layout-transition-speed ease;
 }
 
+.c-body {
+  will-change: contents;
+  transform: translateZ(0);
+}
+
+
 .c-sidebar {
-  will-change: auto;
   transition: box-shadow $layout-transition-speed, transform $layout-transition-speed, margin-left $layout-transition-speed, margin-right $layout-transition-speed, width $layout-transition-speed, z-index 0s ease $layout-transition-speed;
   &.c-sidebar-unfoldable {
     transition: transform $layout-transition-speed, margin-left $layout-transition-speed, margin-right $layout-transition-speed, width $layout-transition-speed, z-index 0s ease 0s;
