--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -48,6 +48,8 @@
 @each $breakpoint in map-keys($grid-breakpoints) {
   @include media-breakpoint-up($breakpoint) {
     $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+    .c-header .dropdown-menu,
+    .navbar .dropdown-menu,
     .dropdown-menu[data-display^="static"] {
       &.dropdown-menu#{$infix}-left {
         @include ltr {
