refactor: improve email app styles

--- a/scss/apps/email/_email.scss
+++ b/scss/apps/email/_email.scss
@@ -19,9 +19,9 @@
   }
 
 
-  .c-messages {
-    padding: $spacer;
-  }
+  // .c-messages {
+  //   padding: $spacer;
+  // }
 
   .c-message {
     display: flex;
